# token-purchase

./: Anchor.toml  README.md  admin-keypair.json  buffer-keypair.json  index.html  package-lock.json  package.json  phantom-alternative.html  phantom-debug.html  phantom-direct-test.html  server.js  wallet-test.html
.cargo/: config.toml
assets/js/: client.js  wallet.js
idl/: token_purchase.json
programs/token-purchase/: Cargo.toml
programs/token-purchase/src/: lib.rs  lib.rs.bak
tests/: token-purchase.ts
