[package]
name = "token-purchase"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_purchase"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []  # Add this feature

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
solana-program = "=1.16.0"  # Pin to a specific version

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
